# AgentCrew

./: .gitignore  AI_BEHAVIOR.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  main.py  mcp_servers.json.example  pyproject.toml  verify_package.py
.github/workflows/: codeql.yml  publish.yml  pylint.yml  test-build.yml
AgentCrew/: entry.qt.py  main.py  main.qt.py
AgentCrew/modules/: __init__.py
AgentCrew/modules/a2a/: adapters.py  agent_cards.py  registry.py  server.py  task_manager.py
AgentCrew/modules/agents/: base.py  local_agent.py  manager.py  remote_agent.py
AgentCrew/modules/anthropic/: service.py
AgentCrew/modules/chat/: completers.py  console_ui.py  consolidation.py  file_handler.py  message_handler.py
AgentCrew/modules/code_analysis/: service.py  tool.py
AgentCrew/modules/coder/: spec_validation.py  tool.py
ai_docs/: anthropic_api_pdf.md  code_reading.md  groq-chat.md  groq.md  instruction.md  mcp-client.md  memory.md  messages_stream.md  prompt-toolkit-completion.md  tavily.md  tool-use.md  tool_refactoring.md  voice_transcript.md
modules/: anthropic.py  scraping.py
modules/agents/: __init__.py  base.py  manager.py
modules/anthropic/: constants.py  service.py
modules/chat/: __init__.py  completers.py  constants.py  file_completer.py  history.py  interactive.py
modules/clipboard/: __init__.py  service.py  tool.py
modules/code_analysis/: service.py  tool.py
modules/coder/: __init__.py  service.py  spec_validation.py  tool.py
modules/groq/: constants.py  service.py
modules/llm/: base.py  message.py  models.py  service_manager.py
modules/mcp/: service.py  tool.py
modules/mcpclient/: __init__.py  config.py  manager.py  service.py  tool.py
modules/memory/: __init__.py  service.py  tool.py
modules/openai/: service.py
modules/prompts/: constants.py
modules/scraping/: __init__.py  service.py  tool.py
modules/tools/: registration.py  registry.py
modules/web_search/: __init__.py  service.py  tool.py
modules/ytdlp/: __init__.py  service.py  tool.py
specs/: 0_spec_initial.md  10_spec_add_thinking_mode.md  11_add_mcp_client.md  12_add_multi_model_swap.md  13_add_validate_spec.md  14_add_time_travel.md  15_modify_time_travel.md  16_spec_add_code_assistant.md  17_spec_implement_multi_agents.md  18_spec_multi-agent-part2.md  19_spec_multi-agent-part3.md  20_spec_multi-agent-with-tool.1.md  21_spec_multi-agent-with-tool.2.md  22_spec_multi-agent-with-tool.3.md  23_spec_multi-agent-with-tool.4.md  24_spec_refactor_interactivechat.md  25_spec_add_docling_for_handle_file.md  26_spec_refactoring_for_model_cost.md  27_refactoring_agent_tools.md  28_spec_add_sidebar.md  3_spec_add_filter_for_md_file.md  4_spec_add_explain.md  5_spec_add_interactive_chat.md  6_spec_add_scrap_as_a_tooluse.md  7_spec_add_web_search_as_tool_use.md  8_spec_add_clipboard_tool_use.md  9_spec_add_memory_implement.md  craw4ai_plan.md  google_native.md  spec_add_more_log.md  spec_initial.md  spec_summarize_md.md
swissknife/: main.py
tests/: anthropic.py  clipboard_test.py  code_analysis_test.py  groq_test.py  main_test.py  mcpclient_test.py  scraping_test.py  web_search_test.py  yt-dlp_test.py
tests/chat/: test_command_handler.py  test_message_handler.py
tests/coder/: test_code_assistant.py
(+167 files in other folders)
