[project]
name = "swissknife"
version = "0.1.5"
classifiers = ["Private :: Do not upload"]
description = "Claude AI Interactive Chat Tool"
dependencies = [
  "firecrawl",
  "click",
  "python-dotenv",
  "anthropic",
  "pytest",
  "prompt-toolkit>=3.0.50",
  "rich>=13.9.4",
  "pyperclip>=1.9.0",
  "tavily-python>=0.5.1",
  "pillow>=11.1.0",
  "groq>=0.18.0",
  "yt-dlp>=2025.2.19",
  "chromadb>=0.6.3",
  "openai>=1.65.2",
  "tree-sitter>=0.23.2",
  "tree-sitter-c-sharp>=0.23.1",
  "tree-sitter-cpp>=0.23.4",
  "tree-sitter-go>=0.23.4",
  "tree-sitter-java>=0.23.5",
  "tree-sitter-javascript>=0.23.1",
  "tree-sitter-kotlin>=1.0.1",
  "tree-sitter-php>=0.23.11",
  "tree-sitter-python>=0.23.6",
  "tree-sitter-ruby>=0.23.1",
  "tree-sitter-rust>=0.23.2",
  "tree-sitter-typescript>=0.23.2",
  "mcp>=1.3.0",
  "docling>=2.26.0",
  "google-genai>=1.7.0",
  "toml>=0.10.2",
  "pyside6>=6.8.3",
  "markdown>=3.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
swissknife = "swissknife.main:cli_prod"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]
